Prevent long inline code strings from overflowing

--- a/resources/css/torchlight.css
+++ b/resources/css/torchlight.css
@@ -14,6 +14,7 @@ pre {
     padding: 1px 2px;
     font-size: 15px;
     background-color: #E7ECF1;
+    word-break: break-word;
 }
 
 /*
